2009-11-15  Mark Ellis <mark@mpellis.org.uk>

	* 0.3.1 release for 1.4 gvfs series
	* hack the build system for incompatible changes in gvfs-1.4.x

2009-08-30  Mark Ellis  <mark@mpellis.org.uk>

	* add 22x22 icon, filechooser doesn't scale the 48x48 one

2009-07-16  Mark Ellis  <mark@mpellis.org.uk>

	* 0.3 release

2009-06-03  Mark Ellis <mark@mpellis.org.uk>

	* hack the build system for incompatible changes in gvfs-1.2.x

2009-03-16  Mark Ellis <mark@mpellis.org.uk>

	* configure.ac.in - require librapi2 >= 0.12 for CeFindClose
	* daemon/gvfsbackendsynce.c - fix handling of errors for which a
	  particular G_IO_ERROR is not specified; release mutex on error
	  in synce_gfs_delete(); always use CeFindClose()

2009-02-06  Mark Ellis <mark@mpellis.org.uk>

	* configure.ac.in - added check for libgvfscommon, require
	  glib >= 2.18
	* daemon/Makefile.am - removed ref to libgvfscommon, now in LIBS

2009-01-26  Mark Ellis <mark@mpellis.org.uk>

	* 0.2.2 release
	* configure.ac.in - fixed non-POSIX conditionals properly this time

2009-01-13  Mark Ellis <mark@mpellis.org.uk>

	* 0.2.1 release
	* configure.ac.in - fixed some less portable conditionals

2009-01-10  Mark Ellis <mark@mpellis.org.uk>

	* 0.2 release

2009-01-09  Mark Ellis <mark@mpellis.org.uk>

	* rework the build system, now require appropriate gvfs source
	  files rather than a built tree, make dist can include gvfs
	  files or not, depending on configure options

2009-01-03  Mark Ellis <mark@mpellis.org.uk>

	* daemon/gvfsbackendsynce.c - change wstr_*_current to _utf8

2008-12-21  Mark Ellis <mark@mpellis.org.uk>

	* only update mime database when installing directly

2008-12-19  Mark Ellis <mark@mpellis.org.uk>

	* added mime type description for Pocket Word & Excel

2008-10-28  Mark Ellis <mark@mpellis.org.uk>

	* use CeGetDiskFreeSpaceEx() to obtain space details
	  for non main storage

2008-10-22  Mark Ellis <mark@mpellis.org.uk>

	* change make-dist files for gvfs-1.0.2
